--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SpruceKit Reference App</string>
+    <string name="app_name">SpruceKit</string>
     <string name="user">User profile</string>
     <string name="scan_qr_code">Scan QR Code</string>
     <string name="valid">Valid</string>
@@ -13,4 +13,5 @@
     <string name="verification_activity_log">Verification Activity Log</string>
     <string name="chevron">Start action</string>
     <string name="empty_wallet">No credentials added yet</string>
+    <string name="three_dots">More options</string>
 </resources>
