oid4vp UI and error page

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="chevron">Start action</string>
     <string name="empty_wallet">No credentials added yet</string>
     <string name="three_dots">More options</string>
+    <string name="expand">Click to expand</string>
+    <string name="collapse">Click to collapse</string>
+    <string name="error">Error</string>
 </resources>
