Add empty page instructions

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="expand">Click to expand</string>
     <string name="collapse">Click to collapse</string>
     <string name="error">Error</string>
+    <string name="add_first_credential">Click on the button to add your first credential</string>
 </resources>
